Clipper: Fixes #672: Make sure selected notebook is saved and restored correctly

--- a/Clipper/joplin-webclipper/popup/src/App.css
+++ b/Clipper/joplin-webclipper/popup/src/App.css
@@ -115,13 +115,7 @@
 	margin-right: .5em;
 }
 
-.App .Folders select,
-.App .Tags .AwesompleteInput {
-	flex: 1;
-}
-
-.App .Tags .AwesompleteInput, .awesomplete {
-	display: flex !important;
+.App .Folders select {
 	flex: 1;
 }
 
